--- a/hexic.html
+++ b/hexic.html
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="styles.css" />
 
+<script type="text/javascript" src="jsplus.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
 
 </head>
