--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="styles.css" />
 
-<script type="text/javascript" src="jsplus.js"></script>
+<script type="text/javascript" src="http://www.moretticb.com/jsplus/js/jsplus.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
 
 </head>
